--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,11 @@
 	</parent>
 	<groupId>org.mb</groupId>
 	<artifactId>mte</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>mte</name>
 	<description>monitor and track everything(MTE)</description>
 	<properties>
 		<java.version>11</java.version>
-		<maven.compiler.source>8</maven.compiler.source>
-		<maven.compiler.target>8</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -52,6 +50,10 @@
 			<groupId>io.github.dengliming.redismodule</groupId>
 			<artifactId>all</artifactId>
 			<version>1.0.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
 
 	</dependencies>
