--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: "3.8"
 services:
   mte-app:
+    image: mte-app:1.0
     depends_on:
       - redisjson-mte
       - grafana-mte
-    build: .
     ports:
       - 8095:8080
     environment:
