--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
   mte-app:
-    image: mte-app:1.0
+    image: ashwinraj18/mte-api:1.0
     depends_on:
       - redisjson-mte
       - grafana-mte
@@ -9,6 +9,8 @@ services:
       - 8095:8080
     environment:
       REDIS_URL: "redisjson-mte:6379"
+      SQ_URL: "https://rimini-sonar.dot.daimler.com"
+      SQ_TOKEN: "7b262d48b75b9d3686f89c5810c4f038e63ee9bd"
     networks:
       - mte-network
 networks:
