--- a/src/main/resources/mte.properties
+++ b/src/main/resources/mte.properties
@@ -3,3 +3,6 @@ mte.redisUrl=${REDIS_URL}
 #SonarQube
 mte.sqUrl=${SQ_URL}
 mte.sqToken=${SQ_TOKEN}
+#BlackDuck
+mte.bdUrl=${BD_URL}
+mte.bdToken=${BD_TOKEN}
