--- a/src/main/resources/mte.properties
+++ b/src/main/resources/mte.properties
@@ -3,3 +3,8 @@ mte.redisUrl=${REDIS_URL}
 #SonarQube
 mte.sqUrl=${SQ_URL}
 mte.sqToken=${SQ_TOKEN}
+
+#JIRA
+mte.jiraUrl=${JIRA_URL}
+mte.jiraToken=${JIRA_TOKEN}
+
