--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -16,7 +16,9 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
-          java-version: 11
+          java-version: '11'
+          distribution: 'temurin'
+          cache: maven
       - name: Build with Maven
         run:
           mvn clean package --file pom.xml
