--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -8,9 +8,7 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 11
@@ -38,9 +36,11 @@ jobs:
           key: ${{ secrets.AWS_TWEAK_KEY }}
           name: id_rsa
           known_hosts: ${{ secrets.AWS_KNOWN_HOSTS }}
-          run: |
-            ssh ${{ secrets.AWS_TWEAK_USERNAME }}@${{ secrets.AWS_TWEAK_HOST }}
-            sudo docker rm -f mte-app
-            sudo docker rmi ashwinraj18/mte-api:1.0
-            sudo docker pull ashwinraj18/mte-api:1.0
-            sudo docker run -d -p 8095:8080 --name mte-app --network mte-network -e REDIS_URL='redisjson-mte:6379' -e SQ_URL='https://rimini-sonar.dot.daimler.com' -e SQ_TOKEN='7b262d48b75b9d3686f89c5810c4f038e63ee9bd' ashwinraj18/mte-api:1.0
+      - name: aws ssh
+        working-directory: /home/runner/.ssh
+        run: |
+          ssh ${{ secrets.AWS_TWEAK_USERNAME }}@${{ secrets.AWS_TWEAK_HOST }}
+          sudo docker rm -f mte-app
+          sudo docker rmi ashwinraj18/mte-api:1.0
+          sudo docker pull ashwinraj18/mte-api:1.0
+          sudo docker run -d -p 8095:8080 --name mte-app --network mte-network -e REDIS_URL='redisjson-mte:6379' -e SQ_URL='https://rimini-sonar.dot.daimler.com' -e SQ_TOKEN='7b262d48b75b9d3686f89c5810c4f038e63ee9bd' ashwinraj18/mte-api:1.0
