--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -34,13 +34,13 @@ jobs:
         uses: shimataro/ssh-key-action@v2
         with:
           key: ${{ secrets.AWS_TWEAK_KEY }}
-          name: id_rsa
+          name: per_tweak.pem
           known_hosts: ${{ secrets.AWS_KNOWN_HOSTS }}
       - name: aws ssh
         working-directory: /home/runner/.ssh
         run: |
           ls -la
-          ssh -i "id_rsa" ${{ secrets.AWS_TWEAK_USERNAME }}@${{ secrets.AWS_TWEAK_HOST }}
+          ssh -i "per_tweak.pem" ${{ secrets.AWS_TWEAK_USERNAME }}@${{ secrets.AWS_TWEAK_HOST }}
           sudo docker rm -f mte-app
           sudo docker rmi ashwinraj18/mte-api:1.0
           sudo docker pull ashwinraj18/mte-api:1.0
