--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -33,7 +33,7 @@ jobs:
       - name: aws deploy
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.AWS_HOST }}
+          host: ${{ secrets.AWS_TWEAK_HOST }}
           username: ${{ secrets.AWS_TWEAK_USERNAME }}
           key: ${{ secrets.AWS_TWEAK_KEY }}
           port: 22
