--- a/src/main/resources/mte.properties
+++ b/src/main/resources/mte.properties
@@ -9,6 +9,7 @@ mte.bdUrl=${BD_URL}
 mte.bdToken=${BD_TOKEN}
 #JIRA
 mte.jiraUrl=${JIRA_URL}
+mte.jiraUsername=${JIRA_USERNAME}
 mte.jiraToken=${JIRA_TOKEN}
 
 
