--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -30,7 +30,7 @@ jobs:
         run: docker build . --file Dockerfile --tag ashwinraj18/mte-api:1.0
       - name: Docker Push
         run: docker push ashwinraj18/mte-api:1.0
-      - name: aws deploy
+      - name: Deploy on AWS
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.AWS_TWEAK_HOST }}
@@ -38,9 +38,8 @@ jobs:
           key: ${{ secrets.AWS_TWEAK_KEY }}
           port: 22
           script: |
-            ls -la
             sudo docker rm -f mte-app
             sudo docker rmi ashwinraj18/mte-api:1.0
             sudo docker pull ashwinraj18/mte-api:1.0
-            sudo docker run -d -p 8095:8080 --name mte-app --network mte-network -e REDIS_URL='redisjson-mte:6379' -e SQ_URL='https://rimini-sonar.dot.daimler.com' -e SQ_TOKEN=${{secrets.SQ_TOKEN}} ashwinraj18/mte-api:1.0
+            sudo docker run -d -p 8095:8080 --name mte-app --network mte-network -e REDIS_URL='redisjson-mte:6379' -e SQ_URL='https://rimini-sonar.dot.daimler.com' -e SQ_TOKEN=${{secrets.SQ_TOKEN}} -e JIRA_URL=${{secrets.JIRA_URL}} -e JIRA_USERNAME=${{secrets.JIRA_USERNAME}} -e JIRA_TOKEN=${{secrets.JIRA_TOKEN}} ashwinraj18/mte-api:1.0
             exit
