--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -41,5 +41,5 @@ jobs:
             sudo docker rm -f mte-app
             sudo docker rmi ashwinraj18/mte-api:1.0
             sudo docker pull ashwinraj18/mte-api:1.0
-            sudo docker run -d -p 8095:8080 --name mte-app --network mte-network -e REDIS_URL='redisjson-mte:6379' -e SQ_URL=${{secrets.SQ_URL}} -e SQ_TOKEN=${{secrets.SQ_TOKEN}} -e JIRA_URL=${{secrets.JIRA_URL}} -e JIRA_USERNAME=${{secrets.JIRA_USERNAME}} -e JIRA_TOKEN=${{secrets.JIRA_TOKEN}} -e BD_URL={{secrets.BD_URL}} -e BD_TOKEN={{secrets.BD_TOKEN}} ashwinraj18/mte-api:1.0
+            sudo docker run -d -p 8095:8080 --name mte-app --network mte-network -e REDIS_URL='redisjson-mte:6379' -e SQ_URL=${{secrets.SQ_URL}} -e SQ_TOKEN=${{secrets.SQ_TOKEN}} -e JIRA_URL=${{secrets.JIRA_URL}} -e JIRA_USERNAME=${{secrets.JIRA_USERNAME}} -e JIRA_TOKEN=${{secrets.JIRA_TOKEN}} -e BD_URL=${{secrets.BD_URL}} -e BD_TOKEN=${{secrets.BD_TOKEN}} ashwinraj18/mte-api:1.0
             exit
